@@ -43,10 +43,6 @@ NOTE-END  */
 
 #define CRT0_DUMMIES
 
-/* crt0.c should define a symbol `start' and do .globl with a dot.  */
-
-#define DOT_GLOBAL_START
-
 #ifdef BSD_SYSTEM
 /* USG systems I know of running on Vaxes do not actually
    support the load average, so disable it for them.  */
@@ -72,14 +68,6 @@ NOTE-END  */
 #define LOAD_AVE_CVT(x) ((int) ((x) * 100.0))
 
 #endif /* VMS */
-
-/* Vax sysV has alloca in the PW library.  */
-
-#ifdef USG
-#define LIB_STANDARD -lPW -lc
-
-#define TEXT_START 0
-#endif /* USG */
 
 #ifdef BSD4_2
 #define HAVE_FTIME
